tests/invalid/syntax_err_bad_decl_2.c
int main() {
    int foo bar = 3;
    return bar;
}
// ERROR: Line 2, Error 2003